Basic setup is down. next up will be NAVBAR

--- a/src/components/movieCard/MovieCard.scss
+++ b/src/components/movieCard/MovieCard.scss
@@ -1,16 +1,118 @@
-div.card {
-    background-color: blue;
-    border-radius:10px;
-    -webkit-border-radius:10px;
-    -moz-border-radius:10px;
-    box-shadow: 0px 20px 30px 3px blue;
-    p {
-        color: orange;
-        text-align: center;
-    }
-    ul {
-        width: 100%;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
+$black: #282828;
+$point: #484848;
+$point-light: lighten($point, 5%);
+
+$ratio: 1.618;
+$card_width: 250px;
+$card_height: 350px;
+$card_padding: 20px;
+$card-bgcolor: white;
+$card_margin: 25px;
+$card_round: 10px;
+$card-shadow: 10px 10px 0px 0px $point-light;
+$card-padding-basis: 15px;
+$card_head_padding: 0px 0px $card-padding-basis 0px;
+
+*{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body{
+  background-color: $black;
+}
+
+.card {
+  background-color: $card-bgcolor;
+  width: $card_width;
+  min-height: $card_height;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: $card_padding;
+  margin: $card_margin;
+  -webkit-box-shadow: $card-shadow;
+    box-shadow: $card-shadow;
+  border-radius: $card_round;
+  
+  h1 {
+    margin: 0px;
+    padding: $card_head_padding;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 14px;
+    color: $black;
+  }
+  
+  hr{
+    display: block;
+    border: none;
+    height: 3px;
+    background-color: $point;
+    margin: 0px;
+  }
+  
+  button{
+    border: none;
+    border-radius: 5px;
+    background-color: $point;
+    width: 50%;
+    margin: 10px auto;
+    padding: 10px 30px;
+    color: white;
+    font-family: 'Noto Sans KR', sans-serif;
+    text-transform: uppercase;
+  }
+
+  .datesWatched {
+      padding: 2px 0px;
+      font-size: 8px;
+      font-family: 'Noto Sans KR', sans-serif;
+  }
+  
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes line-show {
+  from {margin: 0px 100px;}
+  to {margin: 0px;}
+}
+
+/* Standard syntax */
+@keyframes line-show {
+  from {margin: 0px 100px;}
+  to {margin: 0px;}
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes p-show {
+  from {color: white;}
+  to {color: $black;}
+}
+
+/* Standard syntax */
+@keyframes p-show {
+  from {color: white;}
+  to {color: $black;}
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes shadow-show {
+  from {
+    -webkit-box-shadow: 0px 0px 0px 0px #e0e0e0;
+    box-shadow: 0px 0px 0px 0px #e0e0e0;
+  }
+  to {
+    -webkit-box-shadow: $card-shadow;
+    box-shadow: $card-shadow;
+  }
+}
+
+/* Standard syntax */
+@keyframes shadow-show {
+  from {-webkit-box-shadow: 0px 0px 0px 0px #e0e0e0;box-shadow: 0px 0px 0px 0px #e0e0e0;}
+  to {-webkit-box-shadow: $card-shadow;box-shadow: $card-shadow;}
 }
