--- a/src/containers/movie/MovieContainer.scss
+++ b/src/containers/movie/MovieContainer.scss
@@ -3,12 +3,15 @@
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     justify-content: space-around;
     align-items: center;
-    padding-top: 40px;
+    padding-top: 5px;
 
     @media (min-width: 900px) {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(150px, auto-fill));
         align-items: center;
         justify-content: space-between;
+        width: 75%;
+        left: 12.5%;
+        position: relative;
     }
 }
