--- a/src/containers/navbar/Navbar.scss
+++ b/src/containers/navbar/Navbar.scss
@@ -3,7 +3,6 @@ $point: #484848;
 
 .navbar {   
     padding: 5px;
-    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -14,12 +13,24 @@ $point: #484848;
     border-color: $point;
     background-color: $black;
 
+    @media (min-width: 900px) {
+        margin-left: 10%;
+        margin-top: 25px;
+        width: 80%;
+        // left: 10%;
+        // right: 10%;
+        // top: 10px;
+        // width: 80%;
+    }
+    
     div {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         font-family: 'Noto Sans KR', sans-serif;
-        font-size: 10px;
+        font-size: 16px;
         align-content: space-around;
         justify-items: center;
+
+
     }
 }
