--- a/src/containers/movie/MovieContainer.scss
+++ b/src/containers/movie/MovieContainer.scss
@@ -7,7 +7,7 @@
 
     @media (min-width: 900px) {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(150px, auto-fill));
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
         align-items: center;
         justify-content: space-between;
         width: 75%;
