--- a/src/components/movieCard/MovieCard.scss
+++ b/src/components/movieCard/MovieCard.scss
@@ -35,9 +35,13 @@ body{
           flex-direction: column;
   padding: $card_padding;
   margin: $card_margin;
-  -webkit-box-shadow: $card-shadow;
-    box-shadow: $card-shadow;
+  // -webkit-box-shadow: $card-shadow;
+  //   box-shadow: $card-shadow;
   border-radius: $card_round;
+
+  @media (min-width: 900px) {
+    width: 175px;
+  }
 
   
   .cardTitle {
