--- a/src/containers/navbar/Navbar.scss
+++ b/src/containers/navbar/Navbar.scss
@@ -8,10 +8,10 @@ $point: #484848;
     width: 100%;
     border: solid;
     border-width: thin;
-    border-radius: 10px;
+    border-radius: 0px;
     color: white;
     border-color: $point;
-    background-color: $black;
+    background-color: #484848;
 
     @media (min-width: 900px) {
         margin-left: 10%;
