smal edits on color

--- a/src/components/movieCard/MovieCard.scss
+++ b/src/components/movieCard/MovieCard.scss
@@ -35,14 +35,14 @@ $card-shadow: 5px 5px 0px 0px $point-light;
     height: 35px;
   }
 
-  .yearReleased {
-    color: 	#C0C0C0;
-    height: 15px;
-  }
-  
   .director {
-    color: #777672;
+    color: #dedede;
     height: 25px;
+  }
+
+  .yearReleased {
+    color: 	#C2C2C2;
+    height: 15px;
   }
 
   .ownedCheckbox {
