Changed bottom border color

--- a/src/components/movieCard/MovieCard.scss
+++ b/src/components/movieCard/MovieCard.scss
@@ -28,6 +28,7 @@ $card-shadow: 5px 5px 0px 0px $point-light;
     width: 800px;
     min-height: 0px;
     height: 80px;
+    margin: 0px;
   }
 
 
@@ -94,7 +95,7 @@ $card-shadow: 5px 5px 0px 0px $point-light;
     hr {
       display: block;
       border: none;
-      height: 3px;
+      height: 1px;
       background-color: #FFFFFF;
       margin: 0px;
       
@@ -111,7 +112,7 @@ $card-shadow: 5px 5px 0px 0px $point-light;
   hr {
     display: block;
     border: none;
-    height: 3px;
+    height: 1px;
     background-color: #FFFFFF;
     margin: 0px;
 
